--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
-* {
-    margin: 0;
-    padding: 0;
+
+html{
+    font-size: 2vw;
 }
 
 .counters{
     margin-top: 10vh;
     display: flex;
     flex-direction: row;
-
 }
 
 .counter_1{
@@ -28,9 +27,17 @@
     width: 70vh;
     height: 70vh;
 
-    background: whitesmoke;
+    background: black;
     border: 3px solid #facb03;
     position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: space-evenly;
+
+    justify-content: space-evenly;
+    column-gap: 1px;
+    row-gap: 1px;
 }
 
 .container{
@@ -62,7 +69,7 @@
     font-family: 'Secular One', sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 350%;
+    font-size: 1.5rem;
     line-height: 90%;
     text-align: center;
     text-transform: uppercase;
@@ -78,11 +85,11 @@
 }
 
 .player_name{
-    margin-top: 15%;
+    margin-top: 10%;
     margin-bottom: 15%;
     font-family: 'Secular One', sans-serif;
     font-style: normal;
-    line-height: 10%;
+    font-size: 1rem;
     text-align: center;
     text-transform: lowercase;
 }
@@ -94,39 +101,6 @@
 
 }
 
-
-.horizontal{
-    width: 70vh;
-    height: 70vh;
-
-    flex-direction: column;
-    display: flex;
-    justify-content: space-evenly;
-    position: absolute;
-}
-
-.vertical{
-    width: 70vh;
-    height: 70vh;
-
-    flex-direction: row;
-    display: flex;
-    justify-content: space-evenly;
-    position: absolute;
-}
-
-hr {
-    border: none; /* Убираем границу */
-    background-color: black; /* Цвет линии */
-    color: black; /* Цвет линии для IE6-7 */
-    height: 2px; /* Толщина линии */
-}
-
-.vl {
-    border-left: 2px solid black;
-    height: 100%;
-}
-
 .indicator {
     padding-top: 5%;
     padding-right: 0.5%;
@@ -134,3 +108,18 @@ hr {
     height: 5%;
     justify-content: flex-start;
 }
+
+.section{
+    width: 9%;
+    height: 9%;
+    background-color: whitesmoke;
+    border: 2px;
+
+
+}
+
+.section_pic{
+    width: 100%;
+    height: 100%;
+}
+
